# TaskLens-api

./: .dockerignore  Dockerfile  Makefile  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: codeql.yml  release.yml
src/: cli.py  main.py
src/controllers/: authentication_services.py  home_services.py  tasks_services.py
src/core/: config.py  exceptions.py
src/database/: connect.py
src/middleware/: islogin.py  logging.py
src/schemas/: requests.py  responses.py  schemas.py
src/views/: auth.py  home.py  tasks.py
